--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -17,13 +17,21 @@
           <ion-card-content>
             <p>{{ loadedPlaces[0].description }}</p>
           </ion-card-content>
+          <div>
+            <ion-button fill="clear" color="primary"
+              [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
+              More
+            </ion-button>
+          </div>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)">
+          <ion-item *ngFor="let place of loadedPlaces.slice(1)"
+            [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
+            detail>
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
