--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-offer</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button [defaultHref]="'/places/tabs/offers/' + place?.id"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Edit Offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
