--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
-    <ion-title>Offer Bookings</ion-title>
+    <ion-title>{{ place?.title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place?.id]">
         <ion-icon name="create" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
