--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -8,5 +8,21 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid fixed>
+    <ion-row align-items-center justify-content-center>
+      <ion-col size="5" size-sm="4" size-md="2" offset-sm="2" offset-md="4">Row 1 Col 1</ion-col>
+      <ion-col size="1" size-sm="4" size-md="3">
+        <ion-card>
+          <ion-card-content>
+            <h1>The column</h1>
+            <p>Row 1 Col 2</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>Row 2 Col 1</ion-col>
+      <ion-col>Row 2 Col 2</ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
