ion-label, ion-item and ion-item-slinding

--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -19,7 +19,9 @@
           </ion-card-header>
           <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{ loadedPlaces[0].description }}</p>
+            <p>
+              <ion-text color="danger">{{ loadedPlaces[0].description }}</ion-text>
+            </p>
           </ion-card-content>
           <div>
             <ion-button fill="clear" color="primary"
