--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,6 +4,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-button color="primary" (click)="onLogin()">Login</ion-button>
+<ion-content padding>
+  <ion-item>
+    <ion-label position="floating">Usuario</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
