--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -8,5 +8,26 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+        <ion-list>
+          <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
+            <ion-item>
+              <ion-label>
+                <h5>{{ booking.placeTitle }}</h5>
+                <p>Guests: {{ booking.guestNumber }}</p>
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <ion-item-option color="danger" (click)="onCancelBooking(booking.id, slidingItem)">
+                <ion-icon name="trash" slot="top"></ion-icon>
+                Cancel
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
