--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -17,15 +17,23 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces" [routerLink]="['/', 'places', 'tabs', 'offers', place.id]" detail>
-            <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{ place.title }}</h2>
-              <p>{{ place.description }}</p>
-            </ion-label>
-          </ion-item>
+          <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
+            <ion-item [routerLink]="['/', 'places', 'tabs', 'offers', place.id]" detail>
+              <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ place.title }}</h2>
+                <p>{{ place.description }}</p>
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <ion-item-option color="secondary" (click)="onEdit(place.id, slidingItem)">
+                <ion-icon name="create" slot="top"></ion-icon>
+                Edit
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-list>
       </ion-col>
     </ion-row>
