--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -9,5 +9,8 @@
     <ion-label position="floating">Usuario</ion-label>
     <ion-input></ion-input>
   </ion-item>
-  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
+  <!-- <div text-center>
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  </div> -->
+  <ion-button color="primary" (click)="onLogin()" expand="block">Login</ion-button>
 </ion-content>
