Add color and styling to the app

--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -18,15 +18,7 @@
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
           <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
-            <ion-item [routerLink]="['/', 'places', 'tabs', 'offers', place.id]" detail>
-              <ion-thumbnail slot="start">
-                <ion-img [src]="place.imageUrl"></ion-img>
-              </ion-thumbnail>
-              <ion-label>
-                <h2>{{ place.title }}</h2>
-                <p>{{ place.description }}</p>
-              </ion-label>
-            </ion-item>
+            <app-offer-item [place]="place"></app-offer-item>
             <ion-item-options>
               <ion-item-option color="secondary" (click)="onEdit(place.id, slidingItem)">
                 <ion-icon name="create" slot="top"></ion-icon>
