--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,35 +5,36 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">E-Mail</ion-label>
-            <ion-input type="email"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password"></ion-input>
-          </ion-item>
-          <ion-item>
-              <ion-button slot="start">
-                Start
-              </ion-button>
-              <ion-label>Button Start/End</ion-label>
-              <ion-button slot="end">
-                End
-              </ion-button>
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+
             </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-button color="primary" fill="clear" expand="block">Switch to Login</ion-button>
-        <ion-button color="primary" (click)="onLogin()" expand="block">Login</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+            <ion-item *ngIf="emailCtrl.invalid && emailCtrl.touched" lines="none">
+              <ion-label>Should be a valid email address.</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" ngModel name="password" required minlength="6" #passwordCtrl="ngModel">
+              </ion-input>
+            </ion-item>
+            <ion-item *ngIf="passwordCtrl.invalid && passwordCtrl.touched">
+              <ion-label text-wrap>Password should at least be 6 characters long.</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
+          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block" [disabled]="form.invalid">Login</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
