--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,13 +1,35 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     <ion-grid>
-      <ion-row>
+      <ion-row *ngIf="isLogin">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+
+            </ion-item>
+            <ion-item *ngIf="emailCtrl.invalid && emailCtrl.touched" lines="none">
+              <ion-label>Should be a valid email address.</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" ngModel name="password" required minlength="6" #passwordCtrl="ngModel">
+              </ion-input>
+            </ion-item>
+            <ion-item *ngIf="passwordCtrl.invalid && passwordCtrl.touched">
+              <ion-label text-wrap>Password should at least be 6 characters long.</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!isLogin">
         <ion-col size-sm="6" offset-sm="3">
           <ion-list>
             <ion-item>
@@ -31,8 +53,12 @@
       </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
-          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block" [disabled]="form.invalid">Login</ion-button>
+          <ion-button type="button" color="primary" fill="clear" expand="block" (click)="onSwitchAuthMode()">
+            Switch to {{ isLogin ? 'Signup' : 'Login'}}
+          </ion-button>
+          <ion-button type="submit" color="primary" expand="block" [disabled]="form.invalid">
+            Login
+          </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
