--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -39,8 +39,11 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
-        <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="70px">
-          <ion-item *virtualItem="let place" [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail>
+        <!-- <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="70px"> -->
+        <ion-list>
+          <!-- <ion-item *virtualItem="let place" [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail> -->
+          <ion-item *ngFor="let place of listedLoadedPlaces"
+            [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail>
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
@@ -49,7 +52,8 @@
               <p>{{ place.description }}</p>
             </ion-label>
           </ion-item>
-        </ion-virtual-scroll>
+        </ion-list>
+        <!-- </ion-virtual-scroll> -->
       </ion-col>
     </ion-row>
   </ion-grid>
