--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -9,28 +9,35 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-segment (ionChange)="onFilterUpdate($event)">
+  <ion-segment (ionChange)="onFilterUpdate($event.detail.value)">
     <ion-segment-button value="all" checked>All Places</ion-segment-button>
     <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
   </ion-segment>
 
-  <ion-grid>
+  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length === 0">
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+        <p>There are no bookable places right now, please come back later!</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="relevantPlaces.length > 0">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <ion-card>
           <ion-card-header>
-            <ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
-            <ion-card-subtitle>{{ loadedPlaces[0].price | currency }} / Night</ion-card-subtitle>
+            <ion-card-title>{{ relevantPlaces[0].title }}</ion-card-title>
+            <ion-card-subtitle>{{ relevantPlaces[0].price | currency }} / Night</ion-card-subtitle>
           </ion-card-header>
-          <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+          <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
             <p>
-              <ion-text color="danger">{{ loadedPlaces[0].description }}</ion-text>
+              <ion-text color="danger">{{ relevantPlaces[0].description }}</ion-text>
             </p>
           </ion-card-content>
           <div>
             <ion-button fill="clear" color="primary"
-              [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
+              [routerLink]="['/', 'places', 'tabs', 'discover', relevantPlaces[0].id]">
               More
             </ion-button>
           </div>
