--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -8,5 +8,21 @@
 </ion-header>
 
 <ion-content>
-  <ion-button color="primary" margin (click)="bookPlace()">Book</ion-button>
+  <ion-grid no-padding>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" no-padding>
+        <ion-img [src]="place.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col size-sm="6" offset-sm="3" text-center>
+          <p>{{ place.description }}</p>
+        </ion-col>
+      </ion-row>
+    <ion-row *ngIf="bookable">
+      <ion-col size-sm="6" offset-sm="3" text-center>
+        <ion-button color="primary" margin (click)="bookPlace()">Book</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
