--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -15,8 +15,18 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
-        <ion-list>
+      <ion-col size="12" size-sm="8" offset-sm="2" *ngIf="loading">
+        <div text-center>
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+      </ion-col>
+      <ion-col size="12" size-sm="8" offset-sm="2" *ngIf="!loading">
+        <div text-center *ngIf="this.loadedPlaces.length === 0">
+          <p>No offers found! Please create one first!</p>
+          <ion-button routerLink="/places/tabs/offers/new">Offer a new Place</ion-button>
+        </div>
+
+        <ion-list *ngIf="this.loadedPlaces.length > 0">
           <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
             <app-offer-item [place]="place"></app-offer-item>
             <ion-item-options>
