Implement single place fetching

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,22 +3,30 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ place.title }}</ion-title>
+    <ion-title *ngIf="!isLoading">{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid no-padding>
+  <ion-grid *ngIf="isLoading" text-center>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" no-padding>
+        <ion-spinner></ion-spinner>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid *ngIf="!isLoading" no-padding>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3" no-padding>
         <ion-img [src]="place.imageUrl"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="3" text-center>
-          <p>{{ place.description }}</p>
-        </ion-col>
-      </ion-row>
+      <ion-col size-sm="6" offset-sm="3" text-center>
+        <p>{{ place.description }}</p>
+      </ion-col>
+    </ion-row>
     <ion-row *ngIf="bookable">
       <ion-col size-sm="6" offset-sm="3" text-center>
         <ion-button color="primary" margin (click)="bookPlace()">Book</ion-button>
