--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="'/places/tabs/offers/' + place?.id"></ion-back-button>
+      <ion-back-button [defaultHref]="'/places/tabs/offers/' + placeId"></ion-back-button>
     </ion-buttons>
     <ion-title>Edit Offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateOffer()" [disabled]="form.invalid">
+      <ion-button (click)="onUpdateOffer()" [disabled]="form?.invalid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,7 +13,15 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="form">
+  <ion-grid *ngIf="isLoading">
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" text-center>
+        <ion-spinner></ion-spinner>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <form *ngIf="!isLoading" [formGroup]="form">
     <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
