--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>{{ place?.title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place?.id]">
+      <ion-button *ngIf="place" [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place?.id]">
         <ion-icon name="create" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
