Handle with erros

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,18 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title *ngIf="!isLoading">{{ place.title }}</ion-title>
+    <ion-title>{{ isLoading ? 'Loading...' : place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid *ngIf="isLoading" text-center>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3" no-padding>
-        <ion-spinner></ion-spinner>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div *ngIf="isLoading" text-center>
+    <ion-spinner></ion-spinner>
+  </div>
 
   <ion-grid *ngIf="!isLoading" no-padding>
     <ion-row>
