--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -1,4 +1,4 @@
-<ion-item [routerLink]="['/', 'places', 'tabs', 'offers', place.id]" detail="false">
+<ion-item detail="false">
   <ion-thumbnail slot="start">
     <ion-img [src]="place.imageUrl"></ion-img>
   </ion-thumbnail>
