--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -22,7 +22,7 @@
     </ion-row>
   </ion-grid>
 
-  <ion-grid *ngIf="!isLoading && !relevantPlaces || relevantPlaces.length === 0">
+  <ion-grid *ngIf="!isLoading && (!relevantPlaces || relevantPlaces.length === 0)">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <p>There are no bookable places right now, please come back later!</p>
