--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -20,6 +20,9 @@
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
             <ion-item>
+              <ion-avatar slot="start">
+                <ion-img [src]="booking.placeImageUrl"></ion-img>
+              </ion-avatar>
               <ion-label>
                 <h5>{{ booking.placeTitle }}</h5>
                 <p>Guests: {{ booking.guestNumber }}</p>
