Present location preview and add css

--- a/src/app/shared/pickers/location-picker/location-picker.component.html
+++ b/src/app/shared/pickers/location-picker/location-picker.component.html
@@ -1,5 +1,8 @@
-<div>
-  <ion-button color="primary" (click)="onPickLocation()">
+<div class="picker">
+  <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  <ion-img *ngIf="selectedLocationImageUrl && !isLoading" class="location-image" [src]="selectedLocationImageUrl">
+  </ion-img>
+  <ion-button *ngIf="!selectedLocationImageUrl && !isLoading" color="primary" (click)="onPickLocation()">
     <ion-icon name="map" slot="start"></ion-icon>
     <ion-label>Select Location</ion-label>
   </ion-button>
