Add location submission and posisibility for location view on map modal

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -19,8 +19,18 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-sm="6" offset-sm="3" text-center>
+      <ion-col size-sm="6" offset-sm="3" padding text-center>
         <p>{{ place.description }}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" text-center>
+        <p>{{ place.location.address }}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" no-padding>
+        <ion-img role="button" (click)="openPlace()" class="location-image" [src]="place.location.imgUrl"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="bookable">
