--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -60,7 +60,7 @@
       </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <app-location-picker></app-location-picker>
+          <app-location-picker (change)="changeLocation($event)"></app-location-picker>
         </ion-col>
       </ion-row>
     </ion-grid>
