--- a/src/app/shared/map-modal/map-modal.component.html
+++ b/src/app/shared/map-modal/map-modal.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Pick Location</ion-title>
+    <ion-title>{{ title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="onCancel()">Cancel</ion-button>
+      <ion-button (click)="onCancel()">{{ buttonText }}</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
