--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -63,6 +63,11 @@
           <app-location-picker (change)="changeLocation($event)"></app-location-picker>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <app-image-picker (change)="changeImage($event)"></app-image-picker>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
