--- a/src/app/shared/pickers/image-picker/image-picker.component.html
+++ b/src/app/shared/pickers/image-picker/image-picker.component.html
@@ -1,9 +1,10 @@
 <div class="picker">
-  <ion-img role="button" (click)="onPickImage()" *ngIf="selectedImageUrl && !isLoading" class="image"
-    [src]="selectedImageUrl">
+  <ion-img role="button" (click)="onPickImage()" *ngIf="selectedImage && !isLoading" class="image"
+    [src]="selectedImage">
   </ion-img>
-  <ion-button *ngIf="!selectedImageUrl && !isLoading" color="primary" (click)="onPickImage()">
+  <ion-button *ngIf="!selectedImage && !isLoading" color="primary" (click)="onPickImage()">
     <ion-icon name="camera" slot="start"></ion-icon>
     <ion-label>Take Picture</ion-label>
   </ion-button>
+  <input type="file" accept="image/jpeg" *ngIf="usePicker" #filePicker (change)="onFileChosen($event)" />
 </div>
