--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="secondary">
+  <ion-toolbar>
     <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -57,7 +57,7 @@
             Switch to {{ isLogin ? 'Signup' : 'Login'}}
           </ion-button>
           <ion-button type="submit" color="primary" expand="block" [disabled]="form.invalid">
-            Login
+            {{ isLogin ? 'Login' : 'Signup'}}
           </ion-button>
         </ion-col>
       </ion-row>
