--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -60,12 +60,12 @@
       </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <app-location-picker (change)="changeLocation($event)"></app-location-picker>
+          <app-location-picker [showPreview]="form.get('location').value" (change)="changeLocation($event)"></app-location-picker>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <app-image-picker (change)="changeImage($event)"></app-image-picker>
+          <app-image-picker [showPreview]="form.get('image').value" (change)="changeImage($event)"></app-image-picker>
         </ion-col>
       </ion-row>
     </ion-grid>
