--- a/src/app/shared/pickers/image-picker/image-picker.component.html
+++ b/src/app/shared/pickers/image-picker/image-picker.component.html
@@ -1,8 +1,8 @@
 <div class="picker">
-  <ion-img role="button" (click)="onPickImage()" *ngIf="selectedImage && !isLoading" class="image"
+  <ion-img role="button" (click)="onPickImage()" *ngIf="selectedImage && !isLoading && showPreview" class="image"
     [src]="selectedImage">
   </ion-img>
-  <ion-button *ngIf="!selectedImage && !isLoading" color="primary" (click)="onPickImage()">
+  <ion-button *ngIf="(!showPreview && !isLoading) || (!selectedImage && !isLoading)" color="primary" (click)="onPickImage()">
     <ion-icon name="camera" slot="start"></ion-icon>
     <ion-label>Take Picture</ion-label>
   </ion-button>
